Fix nav logo alignment

--- a/nx/blocks/nav/nav.css
+++ b/nx/blocks/nav/nav.css
@@ -38,7 +38,7 @@ p {
 }
 
 .nx-nav-brand span {
-  margin-bottom: 2px;
+  margin-bottom: 3px;
 }
 
 .nx-nav-actions {
